# Trademore

./: .gitignore  README.md  stock_data.csv  test.py
ML/: README.md  trademore.py
cpp/: CMakeLists.txt
cpp/src/: Alpaca.h  AlpacaExample.cpp  CMakeLists.txt  Quandl.cpp  Quandl.h  QuandlExample.cpp  alpaca.cpp  http_request.cpp
python/: market_data.py
trademore/: dune-project
trademore/_build/: .db  .digest-db  log
trademore/_build/default/: META.trademore  trademore.dune-package  trademore.install  trademore.opam
trademore/_build/default/.dune/: configurator  configurator.v2
trademore/_build/default/lib/: trademore.cma  trademore.cmxa  trademore.cmxs  trademore.ml-gen
trademore/_build/default/lib/.merlin-conf/: lib-trademore
trademore/_build/default/lib/.trademore.objs/: trademore__Alpaca.impl.d
trademore/_build/default/lib/.trademore.objs/byte/: trademore.cmi  trademore.cmo  trademore.cmt  trademore__Alpaca.cmi  trademore__Alpaca.cmo  trademore__Alpaca.cmt
trademore/_build/default/lib/.trademore.objs/native/: trademore.cmx  trademore__Alpaca.cmx
trademore/_build/default/test/.merlin-conf/: exe-test_alpaca  exe-test_trademore
trademore/_build/default/test/.test_alpaca.eobjs/byte/: dune__exe__Test_alpaca.cmi  dune__exe__Test_alpaca.cmti
trademore/_build/default/test/.test_trademore.eobjs/: dune__exe.ml-gen  dune__exe__Test_trademore.impl.d  dune__exe__Test_trademore.intf.d
trademore/_build/default/test/.test_trademore.eobjs/byte/: dune__exe.cmi  (+4 more)
trademore/lib/: alpaca.ml  dune  sma.ml  type_stock.ml
trademore/test/: dune  test_alpaca.ml
(+17 files in other folders)
